vertical alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,17 +219,29 @@ iframe {
 	clear:both;
 }
 
-
+#gallery {
+	background-color: #FFF;
+}
 .gallery-image {
 	width: 30%;
 	box-sizing: border-box;
-	background-color: #efefef;
-	padding-bottom: 35px;
 	float: left;
 	margin-left: 1.5%;
 	margin-right: 1.5%;
 	margin-bottom: 3%;
 
+}
+
+.gallery-image img{
+	width: 100%;
+
+}
+
+#gallery:after {
+	content: '';
+	display: block;
+	clear:both;
+}
 
 
 
